[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 897.0
margin_top = 454.0
margin_right = 1023.0
margin_bottom = 626.0

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 126.0
margin_bottom = 37.0
text = "Play"

[node name="TrainAI" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 126.0
margin_bottom = 82.0
text = "Train AI"

[node name="ReplayAI" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 126.0
margin_bottom = 127.0
disabled = true
text = "Replay AI"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 135.0
margin_right = 126.0
margin_bottom = 172.0
text = "Quit"
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/TrainAI" to="." method="_on_TrainAI_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
